CHT-239: Refactoring